--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "4.0.0",
-  "homepage": "https://AyushmanDatta.github.io/Portfolio.ver1",
+  "homepage": "https://ayushmandatta.github.io/Portfolio.ver1",
   "license": "MIT",
   "repository": {
     "type": "git",
